*Added*
-Support for cbz files with in-process reader web-app.