@@ -17,7 +17,7 @@
 </div>
 <style>
     html{
-        height: 100%;
+        /*height: 100%;*/
         width: 100%;
     }
     .cb-fullscreen{
